tests/baselines/reference/moduleAssignmentCompat3.errors.txt
tests/cases/compiler/moduleAssignmentCompat3.ts(8,8): error TS2304: Cannot find name 'A'.
tests/cases/compiler/moduleAssignmentCompat3.ts(9,8): error TS2304: Cannot find name 'B'.


==== tests/cases/compiler/moduleAssignmentCompat3.ts (2 errors) ====
    module A {
        export var x = 1;
    }
    module B {
        export var x = "";
    }
    
    var a: A;
           ~
!!! error TS2304: Cannot find name 'A'.
    var b: B;
           ~
!!! error TS2304: Cannot find name 'B'.
    
    // both errors
    a = b;
    b = a;
    